--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Splash Screen Colors -->
+    <color name="splash_background">#FF1E88E5</color>
+    <color name="splash_icon_background">#FFFFFFFF</color>
 </resources>
